# Logistic-Regression

./: .gitignore  Logestic_regresion_interview_notes.md  README.md  main.py  pyproject.toml
configs/: calibration.yaml  environment.yaml  model_lr.yaml  monitoring.yaml  serving.yaml  thresholds.yaml  training.yaml
data_contracts/: decision_outcome.yaml  prediction_log.yaml  raw_click_label.yaml  raw_contact_event.yaml  raw_impression_event.yaml  raw_subscription_label.yaml  training_row.yaml
docs/: architecture.md  interview_coverage_matrix.md  kpi_framework.md  phase1_implementation_notes.md  phase2_implementation_notes.md  phase3_implementation_notes.md  phase4_implementation_notes.md  phase5_implementation_notes.md  phase6_implementation_notes.md  phase7_implementation_notes.md  problem_statement.md
experiments/: README.md
feature_store/: README.md  bank_marketing_feature_spec.json  criteo_ctr_feature_spec.json
models/: README.md
pipelines/: README.md  build_training_dataset.py  calibrate_and_route.py  run_hybrid_ranking.py  run_monitoring.py  serve_prediction_api.py  train_logistic_regression.py
samples/: bank_full_smoke.csv
scripts/: phase5_runner.py  phase6_runner.py  phase7_runner.py  run_phase5_full.ps1  run_phase5_sample.ps1  run_phase6_full.ps1  run_phase6_sample.ps1  run_phase7_full.ps1  run_phase7_sample.ps1
services/: README.md
tests/: README.md  __init__.py  test_bank_marketing_parser.py  test_calibration_and_policy.py  test_criteo_parser.py  test_dataset_builder.py  test_feature_engineering.py  test_hybrid_ranking.py  test_metrics.py  (+3 more)
(+19 files in other folders)
