[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "probabilistic-decisioning-platform"
version = "0.1.0"
description = "Phase-wise FAANG-level Logistic Regression platform scaffold."
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
